# dotFinder

./: .gitignore  CMakeLists.txt  README.md  install.sh  launch_program.sh
docker/: Dockerfile  Dockerfile_environment
include/dotFinder/: curator.hpp  system_definitions.hpp
src/: CMakeLists.txt  curator.cpp
src/executable/: CMakeLists.txt  main.cpp
